# reaper-mcp-server

./: README.md  pyproject.toml
docs/: fx-finder-example.md
setup/: claude_desktop_config.json
src/reaper_mcp_server/: audio_analyzer.py  fx_finder.py  reaper_dataclasses.py  rpp_parser.py  server.py
tests/reaper_mcp_server/: test_audio_analyzer.py  test_rpp_parser_items.py  test_utils.py
tests/tools/: test_rpp_parser.py
